2010-01-07  Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* pandora_console_upgrade: Changed permissions in this file to make it executable by default.

	Fixes bug #3146314.

2010-12-28  Sancho Lerena <slerena@artica.es>

	* pandoradb_data.sql: Fixed link for current documentation page at 
	openideas.info Wiki.

	* operation/agentes/graphs.php: Removed divs which makes the empty graphs
	render badly.

2010-12-27  Ramon Novoa  <rnovoa@artica.es>

	* pandoradb_data.sql, include/config_process.php: Updated
	  version strings for the 3.2 release.

2010-12-27  Sancho Lerena <slerena@artica.es>

	* pandora_console.redhat.spec: Some package deps. was missing for redhat.

	* include/functions.php: get_snmpwalk() now accepts a specific part of
	the SNMP MIB, that allow to do not search the full mib on user selection.
	(Used on the enterprise massive SNMP module adition).

2010-12-23  Miguel de Dios  <miguel.dedios@artica.es>

	* DEBIAN/control: added php5-curl dependency.

2010-12-23  Miguel de Dios  <miguel.dedios@artica.es>

	* pandoradb_data.sql: added custom sql for reports, "Group view".
	
	* include/functions_io.php: fixed the "safe_output" function when decode
	the html entity &lt; or &gt; for < or > char.

2010-12-23  Miguel de Dios  <miguel.dedios@artica.es>

	* pandoradb_data.sql: added custom sql for reports a some sqls querys:
	Monitoring Report Agent, Monitoring Report Modules and
	Monitoring Report Alerts.

2010-12-23  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions.php: cleaned source code style.

2010-12-23  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_agents.php: fixed when the filter stanby not exist.

2010-12-23  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions.php: in function "check_sql" added some changes in
	the regular expression for pass the pandora field "delete_pending".

2010-12-23  Miguel de Dios  <miguel.dedios@artica.es>

	* include/ajax/reporting.ajax.php: fixed copy&paste mistake.
